Fixed issues where result would not appear

--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -15,14 +15,18 @@
 
 <div class="container">
 	<form action="">
-		<input type="text" id="numero1" name="">
+		<input type="number" id="numero1" name="">
 		<p>+</p>
-		<input type="text" id="numero2" name="">
+		<input type="number" id="numero2" name="">
 		<p>=</p>
-		<input type="text" id="resultado" name="" readonly>
+		<input type="number" id="resultado" name="" readonly>
 		<input type="button" onclick="suma()" class="btn" value="Resultado" name="" placeholder="Enter Number">
 	</form>
 </div>
+
+<footer>
+	<p>By: Francisco Andrade</p>
+</footer>
 
 <script type="text/javascript" src="calculadora.js"></script>
 </body>
